TEST_PROGRAMS/INVALID/brendan_gordon/thisIsntJs.min
var x;
var y;

y = x*5;

